--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -208,74 +208,54 @@
                                     <action selector="goToSettings:" destination="leV-JT-XQg" eventType="touchUpInside" id="hAf-Wp-HrA"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DEBUG Favorites: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Oo-dL-RlG">
-                                <rect key="frame" x="171" y="245" width="302" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Oo-dL-RlG">
+                                <rect key="frame" x="149" y="232" width="302" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="302" id="ine-f0-qtx"/>
+                                    <constraint firstAttribute="width" constant="302" id="28g-b5-bo2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Txa-l2-f8t">
-                                <rect key="frame" x="105" y="296" width="435" height="198"/>
-                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cPR-Pd-7Ni">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="qgq-14-6ur">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <color key="backgroundColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dpa-NF-ykY">
+                                <rect key="frame" x="199" y="267" width="203" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="203" id="GdT-Qy-eTF"/>
+                                </constraints>
+                                <state key="normal" title="DEBUG: favorites"/>
+                                <connections>
+                                    <action selector="goToSavedMatchesDEBUG:" destination="leV-JT-XQg" eventType="touchUpInside" id="Qne-bm-a9j"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Dpa-NF-ykY" firstAttribute="top" secondItem="2Oo-dL-RlG" secondAttribute="bottom" constant="14" id="3LL-mt-2a4"/>
                             <constraint firstItem="LeR-3W-QO4" firstAttribute="top" secondItem="bs6-RQ-Hov" secondAttribute="bottom" constant="70" id="BO6-33-jhT"/>
-                            <constraint firstItem="Txa-l2-f8t" firstAttribute="top" secondItem="2Oo-dL-RlG" secondAttribute="bottom" constant="30" id="Fdt-UK-jNx"/>
                             <constraint firstItem="n5D-NH-eBG" firstAttribute="centerX" secondItem="Bbg-AR-Zd4" secondAttribute="centerX" id="Gjt-AM-wUH"/>
-                            <constraint firstItem="2Oo-dL-RlG" firstAttribute="top" secondItem="n5D-NH-eBG" secondAttribute="bottom" constant="64" id="I6h-7k-dE4"/>
-                            <constraint firstItem="xgG-lA-4at" firstAttribute="top" secondItem="Txa-l2-f8t" secondAttribute="bottom" constant="106" id="Jsq-Rl-FHy"/>
                             <constraint firstItem="LeR-3W-QO4" firstAttribute="centerX" secondItem="n5D-NH-eBG" secondAttribute="centerX" id="OCf-Xb-gge"/>
-                            <constraint firstItem="Txa-l2-f8t" firstAttribute="leading" secondItem="Bbg-AR-Zd4" secondAttribute="leadingMargin" constant="85" id="ZwQ-0B-PUe"/>
-                            <constraint firstItem="2Oo-dL-RlG" firstAttribute="centerX" secondItem="Txa-l2-f8t" secondAttribute="centerX" id="aqj-d1-jaR"/>
+                            <constraint firstItem="2Oo-dL-RlG" firstAttribute="top" secondItem="n5D-NH-eBG" secondAttribute="bottom" constant="51" id="fDp-St-4CU"/>
                             <constraint firstItem="n5D-NH-eBG" firstAttribute="top" secondItem="LeR-3W-QO4" secondAttribute="bottom" constant="40" id="gfS-ix-fz4"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Txa-l2-f8t" secondAttribute="trailing" constant="40" id="iXz-Wn-5MY"/>
                             <constraint firstItem="LeR-3W-QO4" firstAttribute="leading" secondItem="Bbg-AR-Zd4" secondAttribute="leadingMargin" constant="42" id="j6h-KR-KJr"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Txa-l2-f8t" secondAttribute="trailing" constant="40" id="jfu-1P-6lv"/>
+                            <constraint firstItem="2Oo-dL-RlG" firstAttribute="centerX" secondItem="n5D-NH-eBG" secondAttribute="centerX" id="uBX-K6-CiZ"/>
+                            <constraint firstItem="Dpa-NF-ykY" firstAttribute="centerX" secondItem="2Oo-dL-RlG" secondAttribute="centerX" id="vcj-dc-Yzg"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="iXz-Wn-5MY"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="ProfileWelcomeLabel" destination="LeR-3W-QO4" id="tIR-Iu-3zj"/>
-                        <outlet property="favsCollectionView" destination="Txa-l2-f8t" id="uPk-T2-v4A"/>
                         <outlet property="profileFavoritesLabel" destination="2Oo-dL-RlG" id="pXI-PN-39C"/>
                         <segue destination="kXY-t1-zaG" kind="show" identifier="segueProfileToUserSettings" id="Tnc-8s-y0L"/>
+                        <segue destination="Zmg-Zw-Qie" kind="show" identifier="segueProfileToSM" id="POM-yy-ujG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z8U-I1-yy5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1313" y="1236"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Saved Matches View Controller-->
         <scene sceneID="jPM-Ek-pkk">
             <objects>
-                <collectionViewController id="Zmg-Zw-Qie" sceneMemberID="viewController">
+                <collectionViewController id="Zmg-Zw-Qie" customClass="SavedMatchesViewController" customModule="FlavorFinder" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tfZ-Ka-8fw">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -287,7 +267,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SavedMatchesCell" id="Zjf-PC-wvT">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SavedMatchesCell" id="Zjf-PC-wvT" customClass="SavedMatchesCell" customModule="FlavorFinder">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -297,12 +277,15 @@
                                         <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Su7-8m-rzF">
                                             <rect key="frame" x="29" y="39" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <outlet property="savedMatchLabel" destination="Su7-8m-rzF" id="vGk-gO-4uj"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -310,6 +293,9 @@
                             <outlet property="delegate" destination="Zmg-Zw-Qie" id="9pI-aQ-AYh"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <outlet property="savedMatchesView" destination="tfZ-Ka-8fw" id="dNv-cF-FFY"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bWG-VP-BWM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
